[fix], 分离公共组件，规范部分文件命名

--- a/src/assets/global_css/global_css.css
+++ b/src/assets/global_css/global_css.css
@@ -278,6 +278,30 @@ h6 {
   font-weight: 700;
 }
 
+h1 {
+  font-size: 1.8rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 1.2rem;
+}
+
+h4 {
+  font-size: .9rem;
+}
+
+h5 {
+  font-size: .9rem;
+}
+
+h6 {
+  font-size: .9rem;
+}
+
 /* 选择区样式控制 */
 ::selection {
   color: #fff;
