[update], 4.4 装备面板大致构造完成，及其弹框层级的处理

--- a/src/assets/global_css/global_css.css
+++ b/src/assets/global_css/global_css.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'orgin';
+    font-family: 'origin';
     src: url('../fonts/qingliu.woff');
 }
 
@@ -191,7 +191,7 @@ address {
 }
 
 body {
-    font: 14px "orgin", HELVETICA;
+    font: 14px "origin", HELVETICA;
     background: #fff;
     -webkit-text-size-adjust: 100%;
 }
